2009-08-31  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotchart.tcl: Corrected version number (1.6.3)

2009-07-14  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotaxis.tcl: Added support for formats like %x to label the axes

2009-03-20  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotchart.tcl: Solved issue 2683544 (font size leading to clipped labels)
	* plotpriv.tcl: Ditto
	* plotaxis.tcl: Ditto
	* plotconfig.tcl: Ditto
	* pkgIndex.tcl: Bumped version number to 1.6.3

2009-03-20  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* scaling.tcl: Added special case: very small ranges now clipped to 1.0e-8 (bug #2691870)
	* plotchart.test: Added test forvery small range, introduced tolerance in matching

2009-02-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* plothist.test: Moved to examples/plotchart, renamed to
	  plothist.tcl. This is actually not a test suite in the standard
	  form using tcltest, but an example application.

	* plotcontour.test: Added boilerplate to make it more of a test
	  suite, proper indentation.

2008-02-06 Arjen Markus  <arjenmarkus@users.sourceforge.net>

        * plotcontour.tcl:  Commented out one remaining debug puts statement

2009-01-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.5 ========================
	*

2008-01-20 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotpriv.tcl:  Removed spurious puts statements
        * plotdemos*.tcl: Removed source statement - patch 2521626 (Stuart Cassoff)
        * plothist.test: Corrected histogram test (same patch)

2008-01-18 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Document the rescale method and the new options to createTimeChart
        * plotchart.tcl: Implemented new options for createTimeChart and
                         createGanttChart
        * plotpriv.tcl:  Correction in label to time line - different position