@@ -2,4 +2,4 @@ if {![package vsatisfies [package provide Tcl] 8.4]} {
     # PRAGMA: returnok
     return
 }
-package ifneeded Plotchart 1.6.3 [list source [file join $dir plotchart.tcl]]
+package ifneeded Plotchart 1.7.0 [list source [file join $dir plotchart.tcl]]
